// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectsListFilterThemes /> should render correctly 1`] = `
<Field
  clearable={true}
  component={[Function]}
  componentClass="select"
  id="project-theme"
  name="theme"
  options={
    Array [
      Object {
        "ariaLabel": "SarahKonor",
        "label": "SarahKonor",
        "value": "1",
      },
      Object {
        "ariaLabel": "SarahCroche",
        "label": "SarahCroche",
        "value": "2",
      },
      Object {
        "ariaLabel": "SarahPelle",
        "label": "SarahPelle",
        "value": "3",
      },
      Object {
        "ariaLabel": "SarahZin",
        "label": "SarahZin",
        "value": "4",
      },
    ]
  }
  placeholder="type-theme"
  type="select"
  value={null}
/>
`;

exports[`<ProjectsListFilterThemes /> should render correctly with a selected theme 1`] = `
<Field
  clearable={true}
  component={[Function]}
  componentClass="select"
  id="project-theme"
  name="theme"
  options={
    Array [
      Object {
        "ariaLabel": "SarahKonor",
        "label": "SarahKonor",
        "value": "1",
      },
      Object {
        "ariaLabel": "SarahCroche",
        "label": "SarahCroche",
        "value": "2",
      },
      Object {
        "ariaLabel": "SarahPelle",
        "label": "SarahPelle",
        "value": "3",
      },
      Object {
        "ariaLabel": "SarahZin",
        "label": "SarahZin",
        "value": "4",
      },
    ]
  }
  placeholder="type-theme"
  type="select"
  value="1"
/>
`;
